--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "aqs-gestione-commesse",
-  "version": "2.0.0",
+  "name": "aqs-gestione",
   "private": true,
+  "version": "3.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
